# nbody-sim

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  nbody-sim
configs/: 2body.YML
include/: constants.h
src/: body.cpp  body.h  integrator2d.cpp  integrator2d.hpp  main.cpp  simulation.cpp  simulation.h
